wui floating scrollbar fixes cosmetic issue where appearing scrollbar causes content to shift left slightly

--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -43,6 +43,7 @@ html {
     height: 100%;
     color: #333;
     letter-spacing: 0.03rem;
+    overflow-y: overlay;
 }
 
 body {
